--- a/Homework_3/css/style.css
+++ b/Homework_3/css/style.css
@@ -1,5 +1,14 @@
 #choropleth_map {
-	top:100px;
+	top: 200px;;
+	bottom: 100px; 
+	left: 100px;
+	right: 100px;
+	/*height: 1000px;
+	width: 800px;*/
+}
+
+#interactive_linechart {
+	top:200px;
 	bottom: 100px; 
 	left: 100px;
 	right: 100px;
