--- a/Assignment_2/css/style.css
+++ b/Assignment_2/css/style.css
@@ -1,14 +1,28 @@
 #choropleth_map {
-	margin-left: 15%;
+	margin-left: 5%;
 }
 
 #interactive_linechart {
-	display: block;
+	width: 60%;
+	float: right;
+}
+
+#range_dot_plot{
+	float: left;
+	width: 45%;
+}
+
+#scatter_plot{
+	float: left;
+	width: 75%;
 }
 
   body {
 	background-color: rgb(245, 250, 255);
-	padding:5% 10% 10% 10%;
+	padding-top: 5%;
+	padding-left: 20%;
+	padding-right: 20%;
+	padding-bottom: 10%;
   }
 
   .vis-container {
@@ -20,5 +34,31 @@
   }
 
   #sec-2{
-	margin-bottom: 50px;
+	padding-bottom: 25%;
   }
+
+  #sec-3{
+	padding-bottom: 30%;
+  }
+
+  #sec-4{
+	padding-bottom: 25%;
+  }
+
+  #sec-5{
+	
+  }
+
+  #sec-3-1{
+	
+	padding-left: 50%;
+  }
+
+  h2{
+	font-size: 40px;
+  }
+  p {
+	font-size: 25px;
+  }
+
+  
