--- a/Assignment_2/css/style.css
+++ b/Assignment_2/css/style.css
@@ -51,8 +51,12 @@
 	padding-left: 50%;
   }
 
+   h1{
+    font-size: 40px;
+  }
+  
   h2{
-	font-size: 40px;
+	font-size: 30px;
   }
   p {
 	font-size: 25px;
